--- a/frontend/papaya/templates/papaya/peticiones.html
+++ b/frontend/papaya/templates/papaya/peticiones.html
@@ -77,28 +77,37 @@
     <div class="content container mt-4">
         <div class="row">
             <!-- Primera tarjeta -->
+            {% if entrada != "" %}
             <div class="col-md-6">
                 <div class="card" style="height: 100%;">
                     <div class="card-body text-center">
                         <h1 class="card-title">Entrada</h1>
-
-
-
-
+                        <pre>
+                            {{ entrada }} <!-- Aquí se mostrará la entrada -->
+                        </pre>
+                        
                     </div>
                 </div>
-            </div>
+            </div> 
+            {% endif %}
 
             <!-- Segunda tarjeta -->
+            {% if salida != "" %}
+
             <div class="col-md-6">
                 <div class="card" style="height: 100%;">
                     <div class="card-body text-center">
                         <h1 class="card-title">Salida</h1>
-
+                        
+                        <pre>
+                            {{ salida }} <!-- Aquí se mostrará la entrada -->
+                        </pre>
                         
                     </div>
                 </div>
             </div>
+
+            {% endif %}
         </div>
     </div>
 
