--- a/frontend/papaya/templates/papaya/info.html
+++ b/frontend/papaya/templates/papaya/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChapinTEC | InformacionEstudiante</title>
+    <title>ChapinTEC | Información</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -13,8 +13,10 @@
 <body class="bg-success-subtle position-absolute top-50 start-50 translate-middle">
 
     <div class="card" style="width: 40rem;">
+        <img src="https://cdn-icons-png.flaticon.com/512/3358/3358186.png" class="card-img-top img-fluid w-50 mx-auto d-block"
+            alt="Quetzalito">
         <h1 align="center">Información del Estudiante</h1>
-        <div class="card-body " >
+        <div class="card-body ">
             <ul>
                 <li>
                     <p><b>Nombre: </b>Enner Esaí Mendizabal Castro</p>
