--- a/frontend/papaya/templates/papaya/info.html
+++ b/frontend/papaya/templates/papaya/info.html
@@ -22,10 +22,13 @@
                     <p><b>Nombre: </b>Enner Esaí Mendizabal Castro</p>
                 </li>
                 <li>
+                    <p><b>Carrera:</b> Ingenieria en Ciencias y Sistemas</p>
+                </li>
+                <li>
                     <p><b>Carnet:</b> 202302220</p>
                 </li>
                 <li>
-                    <p><b>Curso: </b>Introducción a la programación y computación 2 sección "B"</p>
+                    <p><b>Curso: </b>Introducción a la programación y computación 2 sección "C"</p>
                 </li>
             </ul>
             <div align="center">
