--- a/frontend/papaya/templates/papaya/peticiones.html
+++ b/frontend/papaya/templates/papaya/peticiones.html
@@ -62,7 +62,7 @@
                             <li><a class="dropdown-item" href="/consulta">Consultar Datos</a></li>
                             <li><a class="dropdown-item" href="/resumenPorFecha">Resumen de clasificación por fecha</a></li>
                             <li><a class="dropdown-item" href="/resumenPorRangoTipo">Resumen por rango de fechas</a></li>
-                            <li><a class="dropdown-item" target="/pruebaMensaje">Reporte en PDF</a></li>
+                            <li><a class="dropdown-item" target="/d">Reporte en PDF</a></li>
                             <li><a class="dropdown-item" href="/pruebaMensaje">Prueba de mensaje</a></li>
                         </ul>
                     </div>
@@ -80,7 +80,7 @@
                 <!-- Columna derecha con los formularios -->
                 <div class="col-5 d-flex justify-content-end">
                     <form method="POST" class="me-2">
-                        <input type="hidden" name="id" value="enviar">
+                        <input type="hidden" name="enviar" value="enviar">
                         <button type="submit" class="btn btn-outline-light">Enviar</button>
                     </form>
                     <form method="POST">
@@ -137,7 +137,7 @@
     <br>
     <footer class="bg-success-subtle text-center text-lg-start py-3">
         <div class="container">
-            <span class="text-muted">&copy; 2024 Proyecto 2. Todos los derechos reservados.</span>
+            <span class="text-muted">&copy; 2024 Proyecto 3. Todos los derechos reservados.</span>
         </div>
     </footer>
 </body>
