--- a/frontend/papaya/templates/papaya/subir.html
+++ b/frontend/papaya/templates/papaya/subir.html
@@ -34,6 +34,14 @@
             <br>
         </div>
     </div>
+
+    <!-- Footer siempre al final -->
+    <br>
+    <footer class="bg-success-subtle text-center text-lg-start py-3">
+        <div class="container">
+            <span class="text-muted">&copy; 2024 Proyecto 3. Todos los derechos reservados.</span>
+        </div>
+    </footer>
 </body>
 
 </html>
