--- a/frontend/papaya/templates/papaya/peticiones.html
+++ b/frontend/papaya/templates/papaya/peticiones.html
@@ -81,7 +81,7 @@
                 <div class="col-5 d-flex justify-content-end">
                     <form method="POST" class="me-2">
                         <input type="hidden" name="enviar" value="enviar">
-                        <button type="submit" class="btn btn-outline-light">Enviar</button>
+                        <button type="submit" class="btn btn-outline-light">Procesar</button>
                     </form>
                     <form method="POST">
                         <input type="hidden" name="reset" value="reset">
