--- a/frontend/papaya/templates/papaya/peticiones.html
+++ b/frontend/papaya/templates/papaya/peticiones.html
@@ -74,9 +74,9 @@
                 </div>
     
                 <!-- Mensaje centrado "Empresa" -->
-                <div class="col-2 text-center">
+                <div class="col-2 d-flex justify-content-center align-items-center">
                     {% if mensaje %}
-                    <div class="alert alert-success " role="alert">
+                    <div class="alert alert-success py-0 m-0" role="alert">
                         {{mensaje}}
                     </div>
                     {% endif %}
