--- a/frontend/papaya/templates/papaya/consulta.html
+++ b/frontend/papaya/templates/papaya/consulta.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChapinTEC | Peticiones</title>
+    <title>ChapinTEC | Consulta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -53,8 +53,15 @@
                 <div class="card" style="height: 100%; ">
                     <div class="card-body text-center">
                         {% if salida != "" %}
-                        <h1 class="card-title">Salida</h1>
-                        <div class="overflow-auto border p-3" style="max-height: 535px; background-color: #f8f9fa; width: 79rem;"> <!-- Scrollable area -->
+                        <h1 class="card-title">Consulta de Datos</h1>
+                        <p>
+                            Solicite al backend a la siguiente dirección: <code>http://127.0.0.1:5000/consulta</code> 
+                            mediante postman o alguna otra herramienta de envío de mensajes HTTP.
+                        </p>
+                        <p>
+                            Si no desde aquí se puede ver que si funciona  :)
+                        </p>
+                        <div class="overflow-auto border p-3" style="max-height: 450px; background-color: #f8f9fa; width: 79rem;"> <!-- Scrollable area -->
                         <pre>
                             {{ salida }} <!-- Aquí se mostrará la entrada -->
                         </pre>
@@ -72,7 +79,7 @@
     <br>
     <footer class="bg-success-subtle text-center text-lg-start py-3">
         <div class="container">
-            <span class="text-muted">&copy; 2024 Proyecto 2. Todos los derechos reservados.</span>
+            <span class="text-muted">&copy; 2024 Proyecto 3. Todos los derechos reservados.</span>
         </div>
     </footer>
 </body>
