--- a/frontend/papaya/templates/papaya/pruebaMensaje.html
+++ b/frontend/papaya/templates/papaya/pruebaMensaje.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChapinTEC | Peticiones</title>
+    <title>ChapinTEC | PruebaMensaje</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -54,7 +54,7 @@
                     <div class="card-body text-center">
                         <h1 class="card-title">Prueba de Mensaje</h1>
                         <p>
-                            Envíe un único mensaje al backend a la siguiente dirección: <code>http://127.0.0.1:5000/prueba</code> 
+                            Envíe un único archivo XML con el mensaje al backend a la siguiente dirección: <code>http://127.0.0.1:5000/prueba</code> 
                             mediante postman o alguna otra herramienta de envío de mensajes HTTP.
                         </p>
                         <p>
