--- a/frontend/papaya/templates/papaya/resumenPorFecha.html
+++ b/frontend/papaya/templates/papaya/resumenPorFecha.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChapinTEC | Peticiones</title>
+    <title>ChapinTEC | ResumenFecha</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -45,10 +45,11 @@
         </div>
     </nav>
 
-    <br>
+
     <!-- Contenido principal -->
     <div class="content container mt-4">
         <div class="row">
+            <h1 class="text-center">Resumen por Fecha</h1>
             <!-- Primera tarjeta -->
             <div class="col-md-3">
                 <div class="card" style="height: 100%;">
@@ -68,17 +69,21 @@
                         </select>
                         </form>
 
-                        {% if fechita %}
+                    {% if fechita %}
                         <br>
+                        {% if not empresi %}
                         <form method="POST">
                             <input type="hidden" name="todo" value="todo">
-                            <button type="submit" class="btn btn-outline-success">Analizar todas las empresas</button>
+                            <button type="submit" class="btn btn-outline-success" {% if todo %} disabled {% endif %}>Analizar todas las empresas</button>
                         </form>
                         <br>
+
+                        {% endif %}
+                        {% if not todo %}
                         <form method="POST">
-                        <select class="form-select" id="empresa" name="empresa" onchange="this.form.submit()" {% if empresita %} disabled {% endif %}>
-                            {% if empresita %}
-                            <option selected >{{ fechita }}</option>
+                        <select class="form-select" id="empresa" name="empresa" onchange="this.form.submit()" {% if empresi %} disabled {% endif %}>
+                            {% if empresi %}
+                            <option selected >{{ empresi }}</option>
                             {% else %}
                             <option selected>Seleccione una empresa</option>
                             {% for empresa in empresas %}
@@ -89,6 +94,8 @@
                         </select>
                         </form>
                         {% endif %}
+
+                    {% endif %}
                     </div>
                 </div>
             </div> 
