--- a/frontend/papaya/templates/papaya/resumenPorRangoTipo.html
+++ b/frontend/papaya/templates/papaya/resumenPorRangoTipo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChapinTEC | Peticiones</title>
+    <title>ChapinTEC | ResumenRangoFechas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -45,10 +45,10 @@
         </div>
     </nav>
 
-    <br>
     <!-- Contenido principal -->
     <div class="content container mt-4">
         <div class="row">
+            <h1 class="text-center">Resumen por Rango de Fechas</h1>
             <!-- Primera tarjeta -->
             <div class="col-md-3">
                 <div class="card" style="height: 100%;">
@@ -97,12 +97,14 @@
 
 
                     {% if fecha2 %}
+
+                        {% if not empresa %}
                         <br>
                         <form method="POST">
                             <input type="hidden" name="todo" value="todo">
                             <button type="submit" class="btn btn-outline-success" {% if todo %} disabled {% endif %}>Analizar todas las empresas</button>
                         </form>
-
+                        {%endif%}
                         
                         {% if not todo %}
                         <br>
